src/app/app_render_tests/snapshots/jiq__app__app_render_tests__basic_ui_tests__snapshot_error_overlay.snap
---
source: src/app/app_render_tests/basic_ui_tests.rs
expression: output
---
"╭   ⚠ Syntax Error   Object | Showing last successful result ──────────────────╮"
"│{                                                                             │"
"│  "test": true                                                                │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│ ╭ Syntax Error ────────────────────────────────────────────────────────────╮ │"
"│ │                                                                          │ │"
"│ │ jq: compile error: syntax error at line 1                                │ │"
"│ │                                                                          │ │"
"│ ╰────────────────────────────── Ctrl+E Close ──────────────────────────────╯ │"
"╰───────────────────────────────────────────────────────────────── L1-3/3 (0%) ╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│                                                                              │"
"╰─────────────── Shift+Tab Navigate Results • Ctrl+E Show Error ───────────────╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy R"
