src/app/app_render_tests/snapshots/jiq__app__app_render_tests__basic_ui_tests__snapshot_results_pane_with_success_unfocused.snap
---
source: src/app/app_render_tests/basic_ui_tests.rs
assertion_line: 197
expression: output
---
"╭ String ──────────────────────────────────────────────────────────────────────╮"
"│"Alice"                                                                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰───────────────────────────────────────────────────────────────── L1-1/1 (0%) ╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│.name                                                                         │"
"╰─── Shift+Tab Navigate Results • Enter Output Result • Ctrl+Q Output Query ───╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+Q Output"
