src/app/app_render_tests/snapshots/jiq__app__app_render_tests__basic_ui_tests__snapshot_results_pane_with_syntax_error_focused.snap
---
source: src/app/app_render_tests/basic_ui_tests.rs
expression: output
---
"╭   ⚠ Syntax Error   String | Showing last successful result ───── L1-1/1 (0%) ╮"
"▌"Alice"                                                                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰───────────────── Tab Edit Query • i Edit Query • > Drill in ─────────────────╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│.invalid[                                                                     │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" F1/? Help • Shift+Tab Edit Query • Ctrl+S Snippets • Ctrl+F Search • Ctrl+C Qui"
