src/app/app_render_tests/snapshots/jiq__app__app_render_tests__basic_ui_tests__snapshot_stats_bar_array_focused.snap
---
source: src/app/app_render_tests/basic_ui_tests.rs
expression: output
---
"╭ Array [3 objects]  · . ─────────────────────────────────────── L1-11/11 (0%) ╮"
"▌[                                                                             │"
"│  {                                                                           │"
"│    "id": 1                                                                   │"
"│  },                                                                          │"
"│  {                                                                           │"
"│    "id": 2                                                                   │"
"│  },                                                                          │"
"│  {                                                                           │"
"│    "id": 3                                                                   │"
"│  }                                                                           │"
"│]                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰── Tab Edit Query • i Edit Query • > value • * iterate • ^ parent • } wrap ───╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" F1/? Help • Shift+Tab Edit Query • Ctrl+S Snippets • Ctrl+F Search • Ctrl+W Sav"
