src/app/app_render_tests/snapshots/jiq__app__app_render_tests__basic_ui_tests__snapshot_stats_bar_error_shows_last_stats.snap
---
source: src/app/app_render_tests/basic_ui_tests.rs
assertion_line: 254
expression: output
---
"╭   ⚠ Syntax Error   Array [5 numbers] | Showing last successful result 7 (0%) ╮"
"│[                                                                             │"
"│  1,                                                                          │"
"│  2,                                                                          │"
"│  3,                                                                          │"
"│  4,                                                                          │"
"│  5                                                                           │"
"│]                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│.invalid[                                                                     │"
"╰─────────────── Shift+Tab Navigate Results • Ctrl+E Show Error ───────────────╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+Q Output"
