src/app/app_render_tests/snapshots/jiq__app__app_render_tests__basic_ui_tests__snapshot_ui_error_overlay_visible.snap
---
source: src/app/app_render_tests/basic_ui_tests.rs
expression: output
---
"╭   ⚠ Syntax Error   Number | Showing last successful result ───── L1-1/1 (0%) ╮"
"│5                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│ ╭ Error ───────────────────────────────────────────────────────────────────╮ │"
"│ │                                                                          │ │"
"│ │ Can't index a number value. Only objects and arrays can be indexed.      │ │"
"│ │                                                                          │ │"
"│ │ Try: Drill into an object (.field) or array (.[0]) first.                │ │"
"│ │                                                                          │ │"
"│ ╰────────────────────────────── Ctrl+E Close ──────────────────────────────╯ │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│.foo                                                                          │"
"╰─────────────── Shift+Tab Navigate Results • Ctrl+E Show Error ───────────────╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy R"
